fixed bug with horizontal scroll

--- a/src/components/profile/Header/header.module.css
+++ b/src/components/profile/Header/header.module.css
@@ -1,6 +1,5 @@
 .header {
   display: flex;
-  width: 100vw;
   justify-content: space-between;
   border-bottom: 1px solid #dfdfdf;
   background-color: #F8F7F1;
